--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -20,12 +20,12 @@
         <item quantity="other">%1$d hatırlatıcı\n%2$s</item>
     </plurals>
     <string name="notification_title">İlaç hatırlatıcısı</string>
-    <string name="notification_content_blank">Şu anda %1$s - %3$s ilacından almanın zamanı geldi%4$s</string>
+    <string name="notification_content_blank">Şu anda %1$s - %2$s%3$s ilacından almanın zamanı geldi%4$s</string>
     <string name="notification_content">Şu anda %1$s - %3$s ilacından %2$s almanın zamanı geldi%4$s</string>
     <string name="notification_taken">ALINDI</string>
     <string name="taken">Alındı</string>
     <string name="skipped">Atlandı</string>
-    <string name="reminder_event_blank">%2$s, %3$s</string>
+    <string name="reminder_event_blank">%1$s%2$s, %3$s</string>
     <string name="reminder_event">%1$s %2$s, %3$s</string>
     <string name="recent_events">Son etkinlikler</string>
     <string name="next_reminders">Sonraki hatırlatıcılar</string>
