--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -20,12 +20,12 @@
         <item quantity="other">%1$d Erinnerungen\n%2$s</item>
     </plurals>
     <string name="notification_title">Erinnerung an ein Medikament</string>
-    <string name="notification_content_blank">Es ist %1$s Uhr - Zeit, %3$s%4$s einzunehmen</string>
+    <string name="notification_content_blank">Es ist %1$s Uhr - Zeit, %2$s%3$s%4$s einzunehmen</string>
     <string name="notification_content">Es ist %1$s Uhr - Zeit, %2$s von %3$s%4$s einzunehmen</string>
     <string name="notification_taken">EINGENOMMEN</string>
     <string name="taken">Eingenommen</string>
     <string name="skipped">Übersprungen</string>
-    <string name="reminder_event_blank">%2$s, %3$s</string>
+    <string name="reminder_event_blank">%1$s%2$s, %3$s</string>
     <string name="reminder_event">%1$s von %2$s, %3$s</string>
     <string name="recent_events">Kürzliche Ereignisse</string>
     <string name="next_reminders">Nächste Erinnerungen</string>
