--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -21,10 +21,12 @@
         <item quantity="other">%1$d recordatorios\n%2$s</item>
     </plurals>
     <string name="notification_title">Toma tu medicación</string>
+    <string name="notification_content_blank">Son las %1$s - hora de tomar %2$s%3$s%4$s</string>
     <string name="notification_content">Son las %1$s - hora de tomar %2$s de %3$s%4$s</string>
     <string name="notification_taken">TOMADO</string>
     <string name="taken">Tomado</string>
     <string name="skipped">Omitido</string>
+    <string name="reminder_event_blank">%1$s%2$s, %3$s</string>
     <string name="reminder_event">%1$s de %2$s, %3$s</string>
     <string name="recent_events">Eventos recientes</string>
     <string name="next_reminders">Siguientes recordatorios</string>
