--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -146,4 +146,6 @@
     <string name="time_period">Time period</string>
     <string name="period_start">Period start</string>
     <string name="period_end">Period end</string>
+    <string name="activate_all">Activate all reminders</string>
+    <string name="deactivate_all">Deactivate all reminders</string>
 </resources>
