--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -1,11 +1,10 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources xmlns:ns0="http://schemas.android.com/tools">
     <string name="tab_settings">Paramètres</string>
     <string name="tab_overview">Aperçu</string>
     <string name="tab_medicine">Médicaments</string>
     <string name="add_medicine">Ajouter un médicament</string>
     <string name="medicine_name">Nom du médicament</string>
     <string name="add_reminder">Ajouter un rappel</string>
-    <string name="edit">Modifier</string>
     <string name="delete">Supprimer</string>
     <string name="time">Temps</string>
     <string name="dosage">Dosage</string>
@@ -35,9 +34,6 @@
     <string name="clear_events">Effacer les événements</string>
     <string name="app_version">Version de l\'application</string>
     <string name="are_you_sure_delete_events">Êtes-vous sûr de supprimer tous les événements?</string>
-    <string name="swipe_left">Balayez vers la gauche</string>
-    <string name="long_press">Appui long</string>
-    <string name="delete_items">Supprimer des éléments</string>
     <string name="show_notifications">Afficher les notifications</string>
     <string name="overview_events">Événements d’affichage d’aperçu</string>
     <string name="four_hours">4 heures</string>
@@ -113,7 +109,7 @@
     <string name="thirty_days">30 jours</string>
     <string name="total">Total</string>
     <plurals name="last_n_days">
-        <item quantity="one" tools:ignore="ImpliedQuantity">Dernier 24 heures</item>
+        <item quantity="one" ns0:ignore="ImpliedQuantity">Dernier 24 heures</item>
         <item quantity="many">Dernier %1$d jours</item>
         <item quantity="other">Dernier %1$d jours</item>
     </plurals>
@@ -146,4 +142,6 @@
     <string name="time_period">Période de temps</string>
     <string name="period_start">Début de la période</string>
     <string name="period_end">Fin de la période</string>
+    <string name="activate_all">Activer tous les rappels</string>
+    <string name="deactivate_all">Désactiver tous les rappels</string>
 </resources>
