--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -5,7 +5,6 @@
     <string name="add_medicine">Aggiungi un medicinale</string>
     <string name="medicine_name">Nome del medicinale</string>
     <string name="add_reminder">Aggiungi promemoria</string>
-    <string name="edit">Modifica</string>
     <string name="delete">Elimina</string>
     <string name="time">Tempo</string>
     <string name="dosage">Dosaggio</string>
@@ -35,9 +34,6 @@
     <string name="clear_events">Elimina gli eventi</string>
     <string name="app_version">Versione dell\'app</string>
     <string name="are_you_sure_delete_events">Vuoi eliminare tutti gli eventi\?</string>
-    <string name="swipe_left">Scorri a sinistra</string>
-    <string name="long_press">Premi a lungo</string>
-    <string name="delete_items">Eliminare gli elementi</string>
     <string name="show_notifications">Mostra le notifiche</string>
     <string name="overview_events">Riepilogo visualizzazione eventi</string>
     <string name="four_hours">4 ore</string>
@@ -146,4 +142,6 @@
     <string name="time_period">Periodo di tempo</string>
     <string name="period_start">Inizio periodo</string>
     <string name="period_end">Fine periodo</string>
+    <string name="activate_all">Attivare tutti i promemoria</string>
+    <string name="deactivate_all">Disattivare tutti i promemoria</string>
 </resources>
