--- a/app/src/main/res/values-nl/strings.xml
+++ b/app/src/main/res/values-nl/strings.xml
@@ -5,7 +5,6 @@
     <string name="add_medicine">Medicatie toevoegen</string>
     <string name="medicine_name">Naam van de medicatie</string>
     <string name="add_reminder">Herinnering toevoegen</string>
-    <string name="edit">Bewerking</string>
     <string name="delete">Verwijderen</string>
     <string name="time">Tijd</string>
     <string name="dosage">Dosering</string>
@@ -34,9 +33,6 @@
     <string name="clear_events">Herinneringen verwijderen</string>
     <string name="app_version">App versie</string>
     <string name="are_you_sure_delete_events">Weet je zeker dat je alle herinneringen wilt verwijderen?</string>
-    <string name="swipe_left">Veeg naar links</string>
-    <string name="long_press">Lang indrukken</string>
-    <string name="delete_items">Verwijderen</string>
     <string name="show_notifications">Meldingen weergeven</string>
     <string name="overview_events">Overzicht herinneringen tonen</string>
     <string name="four_hours">4 uur</string>
@@ -144,4 +140,6 @@
     <string name="time_period">Tijdsperiode</string>
     <string name="period_start">Begin van de periode</string>
     <string name="period_end">Einde periode</string>
+    <string name="activate_all">Alle herinneringen activeren</string>
+    <string name="deactivate_all">Alle herinneringen deactiveren</string>
 </resources>
