--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -138,7 +138,7 @@
     <string name="date">Date</string>
     <string name="active">Active</string>
     <string name="inactive">Inactive</string>
-    <string name="time_period">Time period</string>
+    <string name="active_in_time_period">Active in time period</string>
     <string name="period_start">Period start</string>
     <string name="period_end">Period end</string>
     <string name="activate_all">Activate all reminders</string>
