--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -151,4 +151,9 @@
     <string name="statistics_tab_description">İstatistik sekmesi</string>
     <string name="previous_month">Önceki ay</string>
     <string name="next_month">Gelecek ay</string>
+  <string name="repeat_reminders">Hatırlatmaları tekrarlayın</string>
+  <string name="minutes_1">1 dakika</string>
+  <string name="number_of_repetitions">Tekrar sayısı</string>
+  <string name="time_between_repetitions">Tekrarlar arasındaki süre</string>
+  <string name="repeat_reminders_summary">Bir hatırlatmayı alındı veya atlandı olarak işaretlenene kadar otomatik olarak tekrarlar</string>
 </resources>
