--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -153,4 +153,9 @@
     <string name="statistics_tab_description">Statistics tab</string>
     <string name="previous_month">Previous month</string>
     <string name="next_month">Next month</string>
+    <string name="repeat_reminders">Repeat reminders</string>
+    <string name="minutes_1">1 minute</string>
+    <string name="number_of_repetitions">Number of repetitions</string>
+    <string name="time_between_repetitions">Time between repetitions</string>
+    <string name="repeat_reminders_summary">Automatically repeats a reminder until it is marked taken or skipped</string>
 </resources>
