--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -158,4 +158,5 @@
     <string name="number_of_repetitions">Number of repetitions</string>
     <string name="time_between_repetitions">Time between repetitions</string>
     <string name="repeat_reminders_summary">Automatically repeats a reminder until it is marked taken or skipped</string>
+    <string name="add_linked_reminder">Add linked reminder</string>
 </resources>
