--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -156,4 +156,8 @@
     <string name="number_of_repetitions">Anzahl der Wiederholungen</string>
     <string name="time_between_repetitions">Zeit zwischen den Wiederholungen</string>
     <string name="repeat_reminders_summary">Wiederholt automatisch eine Erinnerung, bis sie als erledigt oder übersprungen markiert wird</string>
+    <string name="add_linked_reminder">Erinnerung für die nächste Dosis hinzufügen</string>
+    <string name="linked_reminder_delay">Verzögerung der nächsten Dosis</string>
+    <string name="delay">Verzögerung</string>
+    <string name="linked_reminder_summary">Nach Erinnerung um %1$s</string>
 </resources>
